aks_istio_openai/aks-store-all-in-one/openai _v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service-v2
  labels:
    app: ai-service
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
      version: v2
  template:
    metadata:
      labels:
        app: ai-service
        version: v2
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-aoai-account
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: ai-service
          image: cmendibl3/ai-service:2.0.0
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 20m
              memory: 46Mi
            # limits:
            #   cpu: 30m
            #   memory: 50Mi
