aks_istio_openai/aks-store-all-in-one/sleep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sleep
  name: sleep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - image: curlimages/curl
          name: sleep
          command: ["/bin/sleep", "infinity"]
          imagePullPolicy: IfNotPresent
