aks_istio_openai/aks-store-all-in-one/openai_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-service
  labels:
    app: ai-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-service
      version: v1
  template:
    metadata:
      labels:
        app: ai-service
        version: v1
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-aoai-account
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: ai-service
          image: cmendibl3/ai-service:1.0.0
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 20m
              memory: 46Mi
            # limits:
            #   cpu: 30m
            #   memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  labels:
    app: ai-service
    service: ai-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: 5001
  selector:
    app: ai-service

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ai-service
spec:
  hosts:
    - ai-service
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: ai-service
            subset: v1
            port:
              number: 5001
          weight: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ai-service
spec:
  host: ai-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
